add cover background

--- a/webserver/views/cover.jade
+++ b/webserver/views/cover.jade
@@ -20,7 +20,7 @@ html(lang='zh-CN')
         //if lt IE 9
           script(src='//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js')
           script(src='//cdn.bootcss.com/respond.js/1.4.2/respond.min.js')
-    body
+    body.background(background="../../images/cover-background.png")
         .site-wrapper
             .site-wrapper-inner
                 .cover-container
